test/parallel/cobegin/errors/cobeginSyntaxError.chpl
var count$: sync int=0;
cobegin{
    count$+=1
    count$+=1
    count$+=1
}
